# webserv

./: .gitignore  Dockerfile  Makefile  README.md  default.conf  docker-compose.yml  pyproject.toml
config_files/: default.conf
root_html/: 1MB.txt  autoindex.html  index3.html
root_html/default_responses/: 100.html  101.html
root_html/test_cgi/cgi-bin/: post_test.py
srcs/: CgiHandler.cpp  CgiHandler.hpp  FileParser.cpp  FileParser.hpp  Http.cpp  Http.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  ServerLocation.cpp  ServerLocation.hpp  Utils.cpp  Utils.hpp  WebServ.cpp  WebServ.hpp  main.cpp
tests/: client.py  config.py  conftest.py  main.py
tests/rfc/: test_host.py  test_response_headers.py
tests/stress/: test_stress.py
webnotes/notes/: teste
